# Shortcuts

./: .gitignore  Cargo.toml  Makefile  package.json
assets/: main.css
src/: error.rs  lib.rs  main.rs
src/models/: mod.rs  shortcut.rs
src/routes/: mod.rs  search.rs
src/service/: shortcut.rs
src/templates/: index.rs  mod.rs  search.rs
src/utils/: system_util.rs
ui/assets/: main.css
ui/templates/: index.html
ui/templates/components/: list.html  search.html
ui/templates/search/: search_results.html
